...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceVariant">

    <ImageView
        android:id="@+id/propertyImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="yes"
        android:scaleType="centerCrop" />

    <TextView
...
